src/scss/home.scss
/* ... */
// .main-girl

.main-girl {
    position: absolute;
    top: 50%;
    right: -150px;
    z-index: 1;
    transform: translateY(-40%);

    width: 600px;
    height: 350px;

    img {
        width: 100%;
        height: 100%;
        object-fit: contain;
    }

    @media (min-width: $mobile) {
        height: 400px;
        right: -140px;
    }

    @media (min-width: $tablet) {
        height: 636px;
        right: 0;
    }
}

.parallax-click {
    position: absolute;
    z-index: 2;
    bottom: 50px;
    left: 55%;

    width: 108px;
    height: 108px;

    @media (min-width: $mobile) {
        width: 159px;
        height: 159px;
    }

    @media (min-width: $tablet) {
        width: 199px;
        height: 199px;
        bottom: -70px;
        left: 45%;
    }

    @media (min-width: $pc) {
        bottom: -100px;
        left: 55%;
    }

    img {
        width: 100%;
        height: 100%;
        object-fit: contain;
    }
}

.gradient-1 {
    position: absolute;
    top: 0;
    right: 0;
    z-index: 0;
    display: none;

    @media (min-width: $mobile) {
        display: block;
    }
}

// =========================  VIDEO BLOCK =========================
.video-block {
    margin-top: 20px;
    text-align: center;
    position: relative;
    @media (min-width: $mobile) {
        margin-top: 130px;
    }

    &__btn {
        background-color: #e126ff;
        cursor: pointer;
        margin: 30px auto 0;
        display: flex;
        align-items: center;
        gap: 8px;
        color: #fff;
        font-size: 20px;
        padding: 18px 40px;
        text-align: center;
        border-radius: 10px;
        border: 1px solid #e126ff;
        z-index: 3;

        &:hover {
            background-color: transparent;
            transition: background 0.4s;
        }

        @media (min-width: $mobile) {
            margin: 30px auto 0;
        }
    }
}

.hero-video {
    width: 100%;
    max-width: 1146px;
    // padding: 0 30px;
    max-height: 500px;
    display: block;
    margin: 0 auto;
    object-fit: contain;
    z-index: 3;
    position: relative;
}

.gradient-2 {
    position: absolute;
    top: -80%;
    left: 0;
    z-index: 0;
    display: none;

    @media (min-width: $mobile) {
        display: block;
    }
}

.parallax-bell {
    position: absolute;
    z-index: 2;
    left: -50px;
    bottom: -65%;
    width: 115px;
    height: 115px;
    transform: scaleX(-1);

    img {
        width: 100%;
        height: 100%;
        object-fit: contain;
    }

    @media (min-width: $mobile) {
        left: auto;
        right: 20px;
        bottom: -45%;
    }

    @media (min-width: $tablet) {
        width: 155px;
        height: 155px;
    }
}

// ========================= TICKER =========================

.ticker {
    margin-top: clamp(20px, 5vw, 120px);
    position: relative;
    z-index: 3;
    width: 6000px;
    transform: translateX(-1500px);

    // .ticker__line

    &__line {
        display: flex;
        gap: 20px;

        color: transparent;
        text-transform: uppercase;
        font-weight: 700;
        -webkit-text-stroke: 1px #fff;

        @media (min-width: $mobile) {
            -webkit-text-stroke: 1.5px #fff;
        }

        &:last-child {
            margin-top: -15px;
            transform: translateX(-150px);
        }
    }

    // .ticker__glass

    &__glass {
        width: 50px;
        height: 50px;

        @media (min-width: $mobile) {
            width: 60px;
            height: 60px;
        }

        @media (min-width: $pc) {
            width: 79px;
            height: 79px;
        }
        img {
            width: 100%;
            height: 100%;
            object-fit: contain;
        }
    }

    // .ticker__item

    &__item {
        display: flex;
        align-items: center;
        font-size: clamp(35px, 5vw, 57px);
    }
}

// ========================= ACTIONS =========================

.actions {
    color: #fff;
    position: relative;
    z-index: 1;
    margin-top: clamp(50px, 10vw, 100px);

    // .actions__container

    &__container {
        display: flex;
        justify-content: center;
        flex-wrap: wrap;
        flex-direction: column;
        @media (min-width: $mobile) {
            flex-direction: row;
        }
        @media (min-width: $pc) {
            flex-wrap: nowrap;
        }
    }

    // .actions__item

    &__item {
        flex: 1 1 33.33%;
        padding: 30px 50px;
        text-align: center;
        border: 1px solid #fff;
        transition: opacity 0.1s ease-in;
        opacity: 0;

        @media (min-width: $tablet) {
            padding: 80px 60px;
        }

        @media (min-width: $pc) {
            padding: 100px 70px;
        }
    }

    // .actions__text

    &__text {
        font-size: clamp(30px, 4vw, 51px);
        text-transform: uppercase;
        font-weight: 700;
        transform: rotate(1deg);
        transition: opacity 0.1s ease-in;
        opacity: 0;
    }

    // .actions__description

    &__description {
        margin-top: clamp(5px, 2vw, 20px);
        font-size: clamp(16px, 2vw, 24px);
        font-weight: 500;
        transition: opacity 0.1s ease-in;
        opacity: 0;
    }
}
/* ... */

